--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    font-family: 'Poppins', sans-serif;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar:hover {
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #2a2a2a;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #141414;
+    cursor: pointer;
+}
+
+.no-scrollbar{
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
